# DearerImGui

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DearerImGui.vcxproj  DearerImGui.vcxproj.filters  PreBuildCommands.bat  README.md
Res/: Template_CMakeLists.txt
Src/: DearerImGui.cpp  DearerImGui.hpp  DearerImGuiUtility.cpp  DearerImGuiUtility.hpp  ImGuiWidgets.cpp  ImGuiWidgets.hpp  Main.cpp  Main.hpp  Renderable.h  UIApp.cpp  UIApp.h  UIUtility.h  Utility.cpp  Utility.hpp
